[project]
name = "advent-of-code-2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Célien Donzé", email = "celien.donze@hefr.ch" }]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.7",
    "networkx>=3.4.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
    "shapely>=2.1.2",
    "tqdm>=4.67.1",
]
